# yellow-belt

./: CMakeLists.txt  README.md  main.cpp
objectives/average-tempurate/: average-temperature.cpp
objectives/bulk-container/: bulk-container.cpp
objectives/matrix/: matrix.cpp
objectives/region-database/: region-database.cpp
objectives/task-manager/: task-manager.cpp
